# haskell-exercices

./: .gitignore  Intro.hs  LICENSE  README.md  haskell-exercices.cabal
